--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ section{
 }
 .bottom{
     height: 500px;
-    background-color: #e5e5e5;
+    background-color: #F8F9FC;
     margin-left: -7%;
     margin-right: -8%;
     height: 650px;
@@ -73,4 +73,23 @@ section{
 .half3 h6{
     margin: -8px;
     padding-left: 4px;
+}
+.background{
+    width: 580px;
+    height: 140px;
+    margin-top: 80px;
+    margin-left: 25%;
+    position: relative;
+    text-align: center;
+    background-image: url("shapes/Group_33094_1.png");
+    background-size: cover;
+    color: white;
+
+}
+.background span{
+    display: inline-flex;
+    
+}
+.inner-text{
+    padding-right: 130px;
 }
